--- a/DataBase_FinalProjects/Web.config
+++ b/DataBase_FinalProjects/Web.config
@@ -5,6 +5,9 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="ConnectionString" connectionString="Data Source=LAPTOP-KREPEUTL;Initial Catalog=QLKD_ThoiTrang;Integrated Security=True" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
